revisi bersama modul 8

--- a/7.ipynb
+++ b/7.ipynb
@@ -188,31 +188,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Masukkan bilangan: 17\n"
+      "Masukkan bilangan: 7.5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17 adalah ganjil\n"
+      "7.5 bukan bilangan yang valid!\n"
      ]
     }
    ],
    "source": [
     "## contoh program untuk memeriksa apakah input nol, ganjil, atau genap\n",
-    "bilangan = int(input(\"Masukkan bilangan:\" ))\n",
+    "bilangan = float(input(\"Masukkan bilangan:\" ))\n",
     "\n",
     "if (bilangan == 0):\n",
     "    print(bilangan, \"adalah nol\")\n",
-    "elif ((bilangan % 2) != 0):\n",
+    "elif ((bilangan % 2) == 1):\n",
     "    print(bilangan, \"adalah ganjil\")\n",
     "elif ((bilangan % 2) == 0):\n",
     "    print(bilangan, \"adalah genap\")\n",
@@ -224,6 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "___\n",
     "## Latihan\n",
     "1. Buatlah program untuk menentukan nilai sesuai input dengan kategori sebagai berikut:\n",
     "\n",
