--- a/8.ipynb
+++ b/8.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,17 +264,14 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "4\n",
-      "7\n",
-      "10\n",
-      "13\n",
-      "16\n",
-      "19\n"
+      "6\n",
+      "11\n",
+      "16\n"
      ]
     }
    ],
    "source": [
-    "for x in range(1,20,3):\n",
+    "for x in range(1,20,5):\n",
     "    print(x)"
    ]
   },
@@ -288,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -418,16 +415,17 @@
       "ayam\n",
       "kambing\n",
       "kerbau\n",
-      "sapi\n"
+      "akhir perulangan\n"
      ]
     }
    ],
    "source": [
     "for x in hewan:\n",
-    "    print(x)\n",
-    "    \n",
     "    if x == 'sapi':\n",
-    "        break"
+    "        break\n",
+    "    print(x)\n",
+    "\n",
+    "print(\"akhir perulangan\")"
    ]
   },
   {
@@ -447,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -466,18 +464,21 @@
       "ayam\n",
       "bebek\n",
       "merpati\n",
-      "kuda\n",
       "angsa\n",
+      "puyuh\n",
+      "akhir perulangan\n",
       "puyuh\n"
      ]
     }
    ],
    "source": [
     "for x in unggas:\n",
+    "    if x == 'kuda':\n",
+    "        continue\n",
+    "        \n",
     "    print(x)\n",
     "    \n",
-    "    if x == 'kuda':\n",
-    "        continue"
+    "print(\"akhir perulangan\")"
    ]
   },
   {
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -649,6 +650,35 @@
     "1. Buat perulangan yang hanya menampilkan bilangan kelipatan 3 dari 0-100.\n",
     "\n",
     "Challenge: Buat program dimana user bisa input sendiri batas bawah, batas atas, dan interval."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tampilNama(nama):\n",
+    "    print(\"Hai nama saya\", nama)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hai nama saya ida\n"
+     ]
+    }
+   ],
+   "source": [
+    "tampilNama('ida')"
    ]
   },
   {
