--- a/10.ipynb
+++ b/10.ipynb
@@ -7,7 +7,7 @@
     "# Modul Python Bahasa Indonesia\n",
     "## Seri Kesepuluh\n",
     "___\n",
-    "Coded by psychohaxer | Version 1.0 (2020.12.26)\n",
+    "Coded by psychohaxer | Version 1.2 (2021.01.09)\n",
     "___\n",
     "Notebook ini berisi contoh kode dalam Python sekaligus outputnya sebagai referensi dalam coding. Notebook ini boleh disebarluaskan dan diedit tanpa mengubah atau menghilangkan nama pembuatnya. Selamat belajar dan semoga waktu Anda menyenangkan.\n",
     "\n",
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bab 10 Pemrograman Berbasis Objek (Object Oriented Programming)\n",
+    "## Bab 10 Pemrograman Berbasis Objek (Object Oriented Programming) Part 1\n",
     "Pemrograman fungsional adalah paradigma pemrograman dimana diterapkan pemodelan objek pada program. Objek di dunia nyata memiliki karakteristik dan kemampuan untuk melakukan sesuatatu.\n",
     "\n",
     "Contoh dari objek adalah mobil. Mobil memiliki karakteristik yang melekat padanya seperti warna, merk, seri, tahun, jumlah penumpang, dan sebagainya. Mobil juga bisa menyalakan mesin, bergerak maju, mundur, menyalakan lampu, mematikan lampu, dan sebagainya.\n",
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Membuat Class\n",
+    "### Class\n",
     "Class berisi variabel untuk menyimpan atribut atau karakteristik atau informasi mengenai objek. Selain itu class juga berisi fungsi (`method`) yang bisa dikerjakan objek tersebut. Method adalah fungsi dalam class.\n",
     "\n",
     "Tip: Disarankan menulis nama class dengan format `PascalCase`.\n",
@@ -55,7 +55,7 @@
     "        self.warna = warna\n",
     "    \n",
     "    def tampilInfo(self):\n",
-    "        print(\"Merk\", self.merk, \"Warna\", self.warna)\n",
+    "        print(\"Merk\", self.merk, \"warna\", self.warna)\n",
     "        \n",
     "    def maju(self, jarak):\n",
     "        print(\"Mobil maju\", jarak, \"meter.\")\n",
@@ -65,106 +65,6 @@
     "        \n",
     "    def jumlahRoda(self):\n",
     "        return self.roda"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mb1 = Mobil(\"Toyota\", \"merah\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Merk Toyota Warna putih\n"
-     ]
-    }
-   ],
-   "source": [
-    "mb1.tampilInfo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mobil maju 10 meter.\n"
-     ]
-    }
-   ],
-   "source": [
-    "mb1.maju(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'putih'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mb1.warna = 'putih'\n",
-    "mb1.warna"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "garasi = []\n",
-    "\n",
-    "## for(i=0; i<4 ;i++)\n",
-    "## i = 5\n",
-    "for i in range(0,4):\n",
-    "    mobil = Mobil('honda','biru')\n",
-    "    garasi.append(mobil)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Merk honda Warna biru\n",
-      "Merk honda Warna biru\n",
-      "Merk honda Warna biru\n",
-      "Merk honda Warna biru\n"
-     ]
-    }
-   ],
-   "source": [
-    "for mobil in garasi:\n",
-    "    mobil.tampilInfo()"
    ]
   },
   {
@@ -227,23 +127,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Obyek\n",
+    "Class yang kita buat tidak akan bisa digunakan jika tidak dibuat obyek. Dengan membuat obyek darinya, kita bisa menjalankan kode didalamnya."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Instansiasi Objek\n",
+    "Instansiasi objek dilakukan dengan syntax:\n",
+    "\n",
+    "``` Python\n",
+    "objek = Class() ## untuk class tanpa argumen constructor\n",
+    "objek = Class(argumen) ## untuk class dengan argumen constructor\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mb1 = Mobil(\"Toyota\", \"merah\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Menanggil Method\n",
+    "Method dapat dipanggil dengan syntax:\n",
+    "``` Python\n",
+    "objek.method()\n",
+    "objek.method(parameter)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merk Toyota Warna putih\n"
+     ]
+    }
+   ],
+   "source": [
+    "mb1.tampilInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mobil maju 10 meter.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mb1.maju(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Memanggil Objek\n",
+    "Objek dapat dipanggil untuk mengembalikan alamat memorinya."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mb1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Memanggil dan Mengubah Atribut\n",
+    "Pemanggilan atribut objek dilakukan dengan syntax:\n",
+    "``` Python\n",
+    "objek.atribut\n",
+    "```\n",
+    "\n",
+    "Sedangkan untuk mengubahnya, kita tinggal memanggilnya dan memberikan nilai baru.\n",
+    "``` Python\n",
+    "objek.atribut = nilai\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'putih'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mb1.warna = 'putih'\n",
+    "mb1.warna"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Objek dalam List\n",
+    "Kita bisa menyimpan beberapa objek dalam sebuah list. Pertama-tama, kita harus mendeklarasikan list tersebut dalam wujud list kosong."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "garasi = []\n",
+    "\n",
+    "## for(i=0; i<4 ;i++)\n",
+    "## i = 5\n",
+    "for i in range(0,4):\n",
+    "    mobil = Mobil('honda','biru')\n",
+    "    garasi.append(mobil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merk honda Warna biru\n",
+      "Merk honda Warna biru\n",
+      "Merk honda Warna biru\n",
+      "Merk honda Warna biru\n"
+     ]
+    }
+   ],
+   "source": [
+    "for mobil in garasi:\n",
+    "    mobil.tampilInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Contoh Class dan Objek\n",
+    "Dibawah ini kita menggunakan class Rocket sebagai contoh."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Rocket():\n",
-    "    # Rocket simulates a rocket ship for a game,\n",
-    "    #  or a physics simulation.\n",
     "    \n",
+    "    ## Constructor, berisi kode untuk mengatur koordinat awal roket\n",
     "    def __init__(self):\n",
-    "        # Each rocket has an (x,y) position.\n",
-    "        self.x = 0\n",
-    "        self.y = 0\n",
+    "        self.x = 0 ## koordinat x\n",
+    "        self.y = 0 ## koordinat y\n",
     "        \n",
+    "    ## Method untuk menaikkan posisi roket\n",
     "    def move_up(self, a=1):\n",
-    "        # Increment the y-position of the rocket.\n",
-    "        self.y += a\n"
+    "        self.y += a\n",
+    "        \n",
+    "    ## Method untuk menurunkan posisi roket\n",
+    "    def move_down(self, a=1):\n",
+    "        self.y -= a\n",
+    "        \n",
+    "    ## Method untuk menggeser roket ke kiri\n",
+    "    def move_left(self, a=1):\n",
+    "        self.x -= a\n",
+    "        \n",
+    "    ## Method untuk menggeser roket ke kanan\n",
+    "    def move_right(self, a=1):\n",
+    "        self.x += a\n",
+    "        \n",
+    "    ## Method untuk menampilkan posisi roket\n",
+    "    def print_loc(self):\n",
+    "        print('x:', self.x, 'y:', self.y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Contoh instansiasi objek"
    ]
   },
   {
@@ -253,7 +356,16 @@
    "outputs": [],
    "source": [
     "r1 = Rocket()\n",
-    "r2 = Rocket()"
+    "r2 = Rocket()\n",
+    "r3 = Rocket()\n",
+    "r4 = Rocket()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Contoh pemanggilan method"
    ]
   },
   {
@@ -263,7 +375,21 @@
    "outputs": [],
    "source": [
     "r1.move_up(5)\n",
-    "r2.move_up()"
+    "r2.move_up()\n",
+    "r3.move_right(3)\n",
+    "r4.move_up(7)\n",
+    "\n",
+    "r1.print_loc()\n",
+    "r2.print_loc()\n",
+    "r3.print_loc()\n",
+    "r4.print_loc()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Contoh pemanggilan atribut"
    ]
   },
   {
@@ -286,11 +412,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "___\n",
+    "## Latihan\n",
+    "1. Buatlah objek sederhana yang memiliki minimal 2 atribut dan method untuk mengubah atributnya!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "coded with ❤ by [psychohaxer](http://github.com/psychohaxer)\n",
+    "___"
+   ]
   }
  ],
  "metadata": {
