--- a/10.ipynb
+++ b/10.ipynb
@@ -21,8 +21,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bab 10 Pemrograman Berbasis Objek (Object Oriented Programming) Part 1\n",
-    "Pemrograman fungsional adalah paradigma pemrograman dimana diterapkan pemodelan objek pada program. Objek di dunia nyata memiliki karakteristik dan kemampuan untuk melakukan sesuatatu.\n",
+    "## Bab 10 Pemrograman Berorientasi Objek (Object Oriented Programming) Part 1\n",
+    "Pemrograman berorientasi objek adalah paradigma pemrograman dimana diterapkan pemodelan objek pada program. Objek di dunia nyata memiliki karakteristik dan kemampuan untuk melakukan sesuatatu.\n",
     "\n",
     "Contoh dari objek adalah mobil. Mobil memiliki karakteristik yang melekat padanya seperti warna, merk, seri, tahun, jumlah penumpang, dan sebagainya. Mobil juga bisa menyalakan mesin, bergerak maju, mundur, menyalakan lampu, mematikan lampu, dan sebagainya.\n",
     "\n",
