--- a/10.b.ipynb
+++ b/10.b.ipynb
@@ -7,7 +7,7 @@
     "# Modul Python Bahasa Indonesia\n",
     "## Seri Kesebelas\n",
     "___\n",
-    "Coded by psychohaxer | Version 1.0 (2021.01.10)\n",
+    "Coded by psychohaxer | Version 1.1 (2021.01.22)\n",
     "___\n",
     "Notebook ini berisi contoh kode dalam Python sekaligus outputnya sebagai referensi dalam coding. Notebook ini boleh disebarluaskan dan diedit tanpa mengubah atau menghilangkan nama pembuatnya. Selamat belajar dan semoga waktu Anda menyenangkan.\n",
     "\n",
@@ -137,6 +137,47 @@
     "scout.move_left(4)\n",
     "scout.move_up()\n",
     "scout.print_loc()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fungsi `super()`\n",
+    "Jika kita menambahkan constructor atau `__init__` maka class tersebut tidak akan mewarisi constructor atau `__init__` induknya. Itu juga berlaku untuk method dengan nama yang sama. Bagaimana jika kita ingin constructor atau `__init__` seperti induknya tapi dengan sedikit perubahan tanpa harus mengetik ulang kodenya? Kita bisa menggunakan fungsi `super()`. Untuk contohnya, kita akan menggunakan class Motor sebagai induk dan class Vespa sebagai anak.       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Motor():\n",
+    "    def __init__(self, bensin):\n",
+    "        self.roda = 2\n",
+    "        self.bensin = bensin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vespa(Motor):\n",
+    "    def __init__(self, bensin):\n",
+    "        super().__init__(bensin)\n",
+    "        print(\"Vespa berhasil dibuat!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vespa = Vespa('pertalite')"
    ]
   },
   {
