--- a/evaluasi/eval1.ipynb
+++ b/evaluasi/eval1.ipynb
@@ -69,9 +69,9 @@
     "\n",
     "|    | Pilihan             |\n",
     "|----|:--------------------|\n",
-    "| a. | garasi[3]           |\n",
-    "| b. | garasi[4]           |\n",
-    "| c. | garasi[5]           |\n",
+    "| a. | `garasi[3]`         |\n",
+    "| b. | `garasi[4]`         |\n",
+    "| c. | `garasi[5]`         |\n",
     "| d. | Semua jawaban benar |\n",
     "| e. | Semua jawaban salah |"
    ]
@@ -89,9 +89,9 @@
     "\n",
     "|    | Pilihan             |\n",
     "|----|:--------------------|\n",
-    "| a. | garasi[2:6]         |\n",
-    "| b. | garasi[2:7]         |\n",
-    "| c. | garasi[2:8]         |\n",
+    "| a. | `garasi[2:6]`       |\n",
+    "| b. | `garasi[2:7]`       |\n",
+    "| c. | `garasi[2:8]`       |\n",
     "| d. | Semua jawaban benar |\n",
     "| e. | Semua jawaban salah |"
    ]
@@ -150,7 +150,7 @@
     "|----|:--------------------|\n",
     "| a. | True                |\n",
     "| b. | False               |\n",
-    "| c. | TypeError           |\n",
+    "| c. | `TypeError`         |\n",
     "| d. | Semua jawaban benar |\n",
     "| e. | Semua jawaban salah |"
    ]
@@ -230,13 +230,13 @@
     "\n",
     "Kode yang tepat untuk membuat objek dari class diatas adalah...\n",
     "\n",
-    "|    | Pilihan                              |\n",
-    "|----|:-------------------------------------|\n",
-    "| a. | lecturer = Lecturer()                |\n",
-    "| b. | lecturer = Lecturer(\"Nasya\")         |\n",
-    "| c. | lecturer = Lecturer(\"Nasya\",\"PNNPL\") |\n",
-    "| d. | Semua jawaban benar                  |\n",
-    "| e. | Semua jawaban salah                  |"
+    "|    | Pilihan                                |\n",
+    "|----|:---------------------------------------|\n",
+    "| a. | `lecturer = Lecturer()`                |\n",
+    "| b. | `lecturer = Lecturer(\"Nasya\")`         |\n",
+    "| c. | `lecturer = Lecturer(\"Nasya\",\"PNNPL\")` |\n",
+    "| d. | Semua jawaban benar                    |\n",
+    "| e. | Semua jawaban salah                    |"
    ]
   },
   {
@@ -280,9 +280,9 @@
     "\n",
     "|    | Pilihan                 |\n",
     "|----|:------------------------|\n",
-    "| a. | lecturer.__institute    |\n",
-    "| b. | lecturer.GetInstitute() |\n",
-    "| c. | lecturer.SetInstitute() |\n",
+    "| a. | `lecturer.__institute`    |\n",
+    "| b. | `lecturer.GetInstitute()` |\n",
+    "| c. | `lecturer.SetInstitute()` |\n",
     "| d. | Semua jawaban benar     |\n",
     "| e. | Semua jawaban salah     |"
    ]
@@ -296,9 +296,9 @@
     "\n",
     "|    | Pilihan                |\n",
     "|----|:-----------------------|\n",
-    "| a. | dosen = Lecturer()     |\n",
-    "| b. | class Dosen(Lecturer): |\n",
-    "| c. | class Lecturer(Dosen): |\n",
+    "| a. | `dosen = Lecturer()`     |\n",
+    "| b. | `class Dosen(Lecturer):` |\n",
+    "| c. | `class Lecturer(Dosen):` |\n",
     "| d. | Semua jawaban benar    |\n",
     "| e. | Semua jawaban salah    |"
    ]
@@ -331,9 +331,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "9caecdda039109896516f93c33897fed6fd99109ab36bf723646f45953f66e81"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -345,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
