finishing modul magic method

--- a/10.f.ipynb
+++ b/10.f.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Astrea object at 0x0000021041D83520>\n"
+      "<__main__.Astrea object at 0x0000021041D949D0>\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "2015"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -194,13 +194,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Magic Method `__call__()`\n",
+    "### Magic Method `__call__`\n",
     "Magic method satu ini memungkinkan kita untuk mengubah atribut ketika objek dipanggil. Cara kerjanya seperti ketika kita memberikan atribut melalui constructor atau `__init__`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -253,13 +253,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Magic Method `__eq__()`\n",
+    "### Magic Method `__eq__`, `__ge__`, dan `__lt__`\n",
     "Pernah terpikir untuk membandingkan dua objek dengan atribut yang sama persis? Mari kota coba menggunakan class SupraY."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "False"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,39 +312,56 @@
    "source": [
     "Mengapa demikian? Padahal keduanya beratribut sama persis. Karena secara default, Python menganggap keduanya adalah dua objek yang berbeda. Analoginya seperti anak kembar. Meskipun keduanya memiliki karakteristik yang sama, tetap saja mereka adalah dua orang yang berbeda.\n",
     "\n",
-    "Dengan magic method `__eq__`, kita bisa membandingkan dua objek dengan melihat atributnya."
+    "Dengan magic method `__eq__`, `__ge__`, dan `__lt__` kita bisa membandingkan dua objek dengan melihat atributnya."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SupraZ(SupraY):\n",
     "    \n",
+    "    ## memeriksa kesamaan diantara dua objek \n",
     "    def __eq__(self, objek):\n",
     "        if not isinstance(objek, SupraZ): ## isinstance akan mengembalikan True jika yang dibandingkan dari class yang sama.\n",
     "            ## memunculkan ValueError jika kondisi terpenuhi\n",
     "            raise ValueError(\"Tidak bisa membandingkan dengan benda selain SupraZ!\")\n",
     "            \n",
-    "        return ((self.warna == objek.warna) and (self.tahun == objek.tahun))"
+    "        return ((self.warna == objek.warna) and (self.tahun == objek.tahun))\n",
+    "    \n",
+    "    ## membuat perbandingan >= dengan objek lain\n",
+    "    def __ge__(self, objek):\n",
+    "        if not isinstance(objek, SupraZ):\n",
+    "            raise ValueError(\"Tidak bisa membandingkan dengan benda selain SupraZ!\")\n",
+    "            \n",
+    "        return self.tahun >= objek.tahun\n",
+    "            \n",
+    "    ## membuat perbandingan <= dengan objek lain\n",
+    "    def __ge__(self, objek):\n",
+    "        if not isinstance(objek, SupraZ):\n",
+    "            raise ValueError(\"Tidak bisa membandingkan dengan benda selain SupraZ!\")\n",
+    "            \n",
+    "        return self.tahun <= objek.tahun"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "sprz1 = SupraZ(\"Merah\", 2012)\n",
-    "sprz2 = SupraZ(\"Hijau\", 2012)\n",
-    "sprz3 = SupraZ(\"Merah\", 2012)"
+    "sprz2 = SupraZ(\"Hijau\", 2014)\n",
+    "sprz3 = SupraZ(\"Merah\", 2012)\n",
+    "sprz4 = SupraZ(\"Hijau\", 2013)\n",
+    "sprz5 = SupraZ(\"Merah\", 2015)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +370,7 @@
        "False"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -373,13 +390,65 @@
        "True"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sprz1 == sprz3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sprz1 >= sprz5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sprz2 >= sprz4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tips\n",
+    "Cara mudah untuk menghafal ketiga magic method tersebut:\n",
+    "\n",
+    "+ `__eq__` = equal\n",
+    "+ `__ge__` = greater equal\n",
+    "+ `__lt__` = less than"
    ]
   },
   {
