--- a/10.f.ipynb
+++ b/10.f.ipynb
@@ -452,11 +452,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "___\n",
+    "## Latihan\n",
+    "1. Buat class Komputer yang memiliki 3 magic method!\n",
+    "\n",
+    "Challenge: Implementasikan semua magic method di bab ini."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "coded with ❤ by [psychohaxer](http://github.com/psychohaxer)\n",
+    "___"
+   ]
   }
  ],
  "metadata": {
